ecmascript/parser/tests/test262-error-references/fail/33bc068464342558.js.stderr
error: Unexpected token Some(Colon)
 --> $DIR/tests/test262-parser/fail/33bc068464342558.js:1:10
  |
1 | (class {a:0})
  |          ^

